<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/settings_sn_summary">
        <Preference android:name="snsignup"
                    android:summary="@string/settings_sn_signup_summary"
                    android:title="@string/settings_sn_signup_title">
        
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/sn_signup_url" />
        </Preference>
	    
	    <CheckBoxPreference android:title="@string/settings_sn_enabled"
	                        android:defaultValue="false"
	                        android:summary="@string/settings_sn_enabled_summary"
	                        android:key="simpleNoteEnabled" />
	                        
        <EditTextPreference android:name="username"
                            android:summary="@string/settings_sn_username_summary"
                            android:title="@string/settings_sn_username"
                            android:key="simpleNoteUsername"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionDone"
                            android:autoText="false" />
                            
        <EditTextPreference android:summary="@string/settings_sn_password_summary"
                            android:title="@string/settings_sn_password"
                            android:key="simpleNotePassword"
                            android:name="password"
                            android:password="true" />
	</PreferenceCategory>
	
</PreferenceScreen> 
